--- a/src/sections/About.css
+++ b/src/sections/About.css
@@ -2,6 +2,7 @@
   justify-content: center ;
   align-items: center;
   text-align: center;
+  gap:3rem
 }
 .main-info img{
   position: relative;
@@ -73,18 +74,13 @@ p {
 
 
 .studies-container{
-  margin-top: 4em;
-  margin-bottom: 4em;
+  margin-top: 4rem;
+  margin-bottom: rem;
 }
 
 .studies-cards{
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
-.container-languages{
-  margin-top: 4em;
-  margin-bottom: 4em;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 @keyframes zoomAuto {
